fix scroll on ie for carousel

--- a/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_carousel.sass
+++ b/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_carousel.sass
@@ -1,8 +1,6 @@
 .carousel-box
-    overflow-x: hidden
+    overflow-x: clip
     position: relative
-    @include breakpoint(desktop, up)
-        overflow-x: clip
     .swiper-container-carousel
         width: 100%
         padding-bottom: 40px
@@ -101,6 +99,8 @@
             &:hover
                 &:after
                     opacity: 0.1
+    @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none)
+        overflow-x: visible
 
 .slide
     background-size: cover
